# GuiLibrary

./: .gitignore  .gitmodules  ARCHITECTURE.md  BUILD_GUIDE.md  BUILD_INSTRUCTIONS.md  CMakeLists.txt  CMakePresets.json  QUICK_START.md  README.md  SCHOOL_GUIDE.md  imgui.ini  setup_dependencies.ps1
NewTask/: CMakeLists.txt  main.cpp
Task_0/: CMakeLists.txt  main.cpp
Task_1/: CMakeLists.txt  main.cpp
Task_2/: CMakeLists.txt  main.cpp
Task_3/: CMakeLists.txt  main.cpp
examples/: animation_example.cpp  docking_test.cpp  school_example.cpp  simple_example.cpp
include/: gui_library.h
src/: gui_library.cpp
